--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -11,10 +12,18 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd-mobile": "^2.3.4",
+    "cross-fetch": "^3.1.4",
+    "graphql": "^15.5.3",
+    "graphql-tag": "^2.12.5",
+    "immer": "^9.0.6",
+    "lodash": "^4.17.21",
+    "rc-form": "^2.4.12",
+    "rc-form-hooks": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "use-immer": "^0.6.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -40,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.172"
   }
 }
