--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "typeRoots": [
+      "src/types",
+      "node_modules/@types"
+    ]
   },
   "include": [
-    "src"
+    "src",
+    "src/types/*"
   ]
 }
