--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.11",
+    "@graphql-codegen/cli": "^2.2.0",
+    "@graphql-codegen/import-types-preset": "^2.1.4",
+    "@graphql-codegen/introspection": "^2.1.0",
+    "@graphql-codegen/typescript": "^2.2.2",
+    "@graphql-codegen/typescript-document-nodes": "^2.1.4",
+    "@graphql-codegen/typescript-operations": "^2.1.4",
+    "@graphql-codegen/typescript-react-apollo": "^3.1.4",
+    "@graphql-codegen/typescript-react-query": "^3.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
