--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BASE_URL='/'
-REACT_APP_GRAPHQL='/graphql'
+BASE_URL='https://stage-api-stone-talent.cyberstone.com.cn'
+REACT_APP_GRAPHQL='${BASE_URL}/graphql?userId=123'
 REACT_APP_ANTD_DEBOUNCE=500
 REACT_APP_APP_NAME='user-management'
