--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rc-form-hooks": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "use-immer": "^0.6.0",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.172",
+    "@types/react-router-dom": "^5.1.9",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.0"
