--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^17.0.0",
     "antd-mobile": "^2.3.4",
     "cross-fetch": "^3.1.4",
+    "date-fns": "^2.23.0",
     "graphql": "^15.5.3",
     "graphql-tag": "^2.12.5",
     "immer": "^9.0.6",
